2006-10-27  J. Mowery <jmowery@tresys.com>

	* added make indent to standardize code indentation style

	* indented all .c and .h files with make indent (except sqlite which it skips)

2006-10-25  J. Tang  <jtang@tresys.com>

	* seaudit-report Logwatch script will look for
	$(bindir)/seaudit-report, rather than the hard-coded
	/usr/bin/seaudit-report

2006-10-25 J. Mowery <jmowery@tresys.com>

	* numbered steps for loading

	* loading syntactic rule table is now off by default

	* updated tools requiring line numbers to build syntactic table as needed

2006-10-24  J. Tang  <jtang@tresys.com>

	* exclude the sqlite files from the Doxygen configuration

2006-10-19  J. Tang  <jtang@tresys.com>

	* added lib<foo>_get_version() functions to libqpol, libpoldiff,
	and libsefs

2006-10-17  J. Tang  <jtang@tresys.com>

	* seaudit-report binary was mistakenly called "seaudit_report"

	* Updated man pages to match programs' help files.

2006-10-13  J. Tang  <jtang@tresys.com>

	* Official release of SETools 3.0.